--- a/main.tex
+++ b/main.tex
@@ -307,7 +307,7 @@ What's really nice about this is a consistent conceptual relationship between fu
 
 These sorts of functions are very familiar to us already. Recalling the example of work given in section 1.3, let $W \in F_1$ be a work function. You give the function a line, and it returns the work necessary to move an object along that line. So, following the formalism described earlier, given $\lambda \in S^1$, we can say that $W(\lambda) = \int f(d\lambda)$, for some covector $f$. This covector is simply a force. 
 
-Concretely, consider a spring with spring constant $k$ and a mass $m$ attached to the end, oscillating without drag. The work necessary to pull the mass from $x = a$ to $x = b$ (being the starting and ending points of a line $\lambda$) is $W(\lambda) = \int_a^b -kx dx$. The force (the covector) is $-kx$, and the infinitesimal segment (the vector) is $dx$. (\textbf{Make work the running example, introduce earlier in 1.3. Also, in the integrated form, the k-functional would be work given a full line, with the covector being the force. Draw up the relationship between the integrated part and the differentiated part})
+Concretely, consider a spring with spring constant $k$ and a mass $m$ attached to the end, oscillating without drag. The work necessary to pull the mass from $x = a$ to $x = b$ (being the starting and ending points of a line $\lambda$) is $W(\lambda) = W(b) - W(a) = \int_a^b -kx dx$. The force (the covector) is $-kx$, and the infinitesimal segment (the vector) is $dx$. (\textbf{Make work the running example, introduce earlier in 1.3. Also, in the integrated form, the k-functional would be work given a full line, with the covector being the force. Draw up the relationship between the integrated part and the differentiated part})
 
 (\textbf{Make a commuting diagram here with integrals on one side and differential on the other})
 
